fixing second title image in portfolio and content overflow in phone resolution

--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -25,7 +25,7 @@ header hgroup nav { margin-top: 10px; }
 header hgroup nav a { text-decoration: none; color: black; margin-right: 20px; border-bottom: 2px solid black;}
 header hgroup nav a:hover { color: #77B;}
 header hgroup div img { float: left; border-radius: 37px; border: 1px solid #999;
-margin-right: 15px; opacity: 0.4; height: 64px; width: 64px; }
+margin-right: 15px; margin-top: 15px; opacity: 0.4; height: 64px; width: 64px; }
 
 header section { width: 10%; float: left; }
 header section li { text-decoration: none; list-style: none; line-height: 1.3; }
@@ -36,7 +36,7 @@ header section li i { font-size: 1.35rem; }
 .content { max-width: 1366px; margin: 0 auto 10px; }
 
 .content > section { float: left; width: 100%; }
-.content > section h2 { margin-bottom: 0.425em; }
+.content > section h2 { margin-bottom: 0.425em; border-bottom: 1px solid #bbb; }
 .content > section article { border: 1px solid #ddd; background-color: rgba(255, 255, 255, 0.7); padding: 20px; border-top: none;}
 .content > section small { display: block; margin-bottom: 5px;}
 .content > section .Disqus { border: 1px solid #ddd; background-color: rgba(255, 255, 255, 0.7); padding: 20px; margin-top: 5px; }
@@ -76,10 +76,11 @@ section.ImageReel img { width: 33.3%; min-width: 212px; height: 256px; float: le
 
 @media(max-width: 480px) {
 	section.GameTitleLeft > div img { width: 100%; }
-	section.GameTitleRight > img { width: 100%; }
+	section.GameTitleRight > div img { width: 100%; }
 	section.GameTitleLeft > div h6 { clear: both; padding-top: 10px; }
-	section.GameTitleRight > div { clear: both; padding-top: 10px; }
+	section.GameTitleRight > div h6 { clear: both; padding-top: 10px; }
 	section.ImageReel img { width: 100%; }
+	section.ImageReel { min-height: 700px; }
 }
 
 .itchio-play {
